# upseto

./: .gitignore  MANIFEST.in  Makefile  README.md  WARNING.md  artifacts.yaml  requirements.txt  setup.cfg  setup.py  skipper.yaml  upseto.pth  upseto.sh
conf/bash_completion.d/: upseto.sh
py/upseto/: avoidparadox.py  fulfiller.py  gitwrapper.py  main.py  manifest.py
py/upseto/tests/: gitwrapper.py  test.py  upsetowrapper.py
sh/: upseto
tests/: gitwrapper.py  test.py  upsetowrapper.py  verifyloggingnotusedinjoinnamespaces.py
upseto/: .gitwrapper.py.swp  avoidparadox.py  checkfulfilled.py  dirtyparadoxresolution.py  fulfiller.py  gitconfigparser.py  gitwrapper.py  graph.py  main.py  manifest.py  packegg.py  pythonnamespacejoin.py  recursivegit.py  run.py  scripting.py  shell.py  tipoffmodulefinder.py  traverse.py  traversenodouble.py
upseto/tests/: .test.py.swp  gitwrapper.py  test.py  upsetowrapper.py
