[metadata]
name = upseto
author = Shlomo Matichin
author-email = shlomi@stratoscale.com
summary = Split your projects across git repos without the disatvantages of git submodule
description-file = README.md
home-page = https://github.com/stratoscale/upseto
license = TBD
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Stratoscale
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: Linux
    Programming Language :: Python
keywords =
    git
    repos
    repositories
    python
    scm
[files]
packages =
    upseto
data_files =
    bin/bash_completion.d =
        conf/bash_completion.d/upseto.sh
    lib/python2.7/site-packages = 
        conf/upseto.pth
[entry_points]
console_scripts =
    upseto = upseto.main:main
